[package]
name = "wasm_scene"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
aes-gcm = "0.9"
aes = "0.7"
generic-array = "0.14"
base64 = "0.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.42"
getrandom = { version = "0.2.15", features = ["js"], optional = true }
js-sys = "0.3.69"
rayon = "1.5.1"
aes-gcm = "0.9"
base64 = "0.13"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'CanvasRenderingContext2d',
    'Element',
    'KeyboardEvent',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'ImageData',
    'WebGlRenderingContext',
    'Performance',
    'WebGlRenderingContext',
    'WebGlUniformLocation',
    'TextMetrics',
    'Performance',
]

[features]
default = ["getrandom/js"]
